Rewrite README for the upstream repository submission preview (#264)
* Rewrite README for the upstream repository submission preview

Lead with what the plugin does, its preview standing (same plugin
version on every node, no rolling upgrade yet), a feature summary that
mirrors docs/features.md, requirements, the opensearch-plugin install
command with the two JVM options, a documentation index over every page
under docs/, the release cadence and the contribution path.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>

* Align getting-started with README on freshness and restart behaviour

Step 6 named the namespace poll as the mechanism that follows a table
forward; it is the freshness check on the node holding the shard, and
POST /{index}/_lance/sync runs it now. Step 7 described an in process
namespace registry cleared by a restart; registrations are cluster state
metadata persisted with the gateway, so the step now describes the
unregister call and the resurface guard instead.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>

* Drop stale Unreleased changelog entries and add the README fragment

The Unreleased block described an earlier README, an explain envelope
restriction the endpoint no longer has, an automatic index build the
plugin stopped performing, and named lance.namespace.poll_cadence a
cluster setting; it is a node setting driving both the catalog listing
and the freshness check.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>

---------

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>